# distributeddatamgr_preferences

./: AGENTS.md  OAT.xml  README_zh.md  bundle.json  preferences.gni
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
frameworks/cj/: BUILD.gn
frameworks/cj/src/: preferences_ffi.cpp  preferences_ffi.h  preferences_impl.cpp  preferences_impl.h  preferences_interface.h  preferences_log.h  preferences_mock.cpp  preferences_utils.cpp  preferences_utils.h
frameworks/common/include/: log_print.h
frameworks/common/src/: preferences_error.cpp
frameworks/ets/taihe/preferences/: BUILD.gn
frameworks/ets/taihe/preferences/idl/: ohos.data.preferences.taihe
frameworks/ets/taihe/preferences/include/: preferences_proxy.h
frameworks/ets/taihe/preferences/src/: ani_constructor.cpp  ohos.data.preferences.impl.cpp  preferences_proxy.cpp
frameworks/js/ani/: BUILD.gn  arktsconfig.json
frameworks/js/ani/common/include/: ani_preferences_error.h  ani_utils.h  js_ani_ability.h
frameworks/js/ani/common/src/: ani_preferences_error.cpp  js_ani_ability.cpp
frameworks/js/ani/ets/: @ohos.data.preferences.ets  BaseContext.ets  ani_preferences.ets
frameworks/js/ani/preferences/: BUILD.gn
frameworks/js/ani/preferences/ets/: @ohos.data.preferences.ets
frameworks/js/ani/preferences/src/: ani_preferences.cpp
frameworks/js/ani/src/: ani_preferences.cpp
frameworks/js/ani/test/: test.ets
frameworks/js/napi/: BUILD.gn
frameworks/js/napi/common/: BUILD.gn  libcommon.map
frameworks/js/napi/common/include/: async_call.h  js_ability.h  js_common_utils.h  js_logger.h  js_observer.h  js_proxy.h  js_sendable_utils.h  js_utils.h  napi_async_call.h  napi_async_proxy.h  napi_preferences_error.h  napi_preferences_observer.h  uv_queue.h
frameworks/js/napi/common/mock/cross_platform/include/: js_ability.h
frameworks/js/napi/common/mock/cross_platform/src/: js_ability.cpp
frameworks/js/napi/common/mock/include/: js_ability.h
frameworks/js/napi/common/mock/src/: async_call.cpp  js_ability.cpp  js_utils.cpp
frameworks/js/napi/common/src/: async_call.cpp  js_ability.cpp  js_common_utils.cpp  js_observer.cpp  js_sendable_utils.cpp  js_utils.cpp  napi_async_call.cpp  napi_preferences_error.cpp  napi_preferences_observer.cpp  napi_uv_queue.cpp  uv_queue.cpp
frameworks/js/napi/preferences/: BUILD.gn
frameworks/js/napi/preferences/include/: napi_preferences.h
frameworks/js/napi/preferences/src/: entry_point.cpp  napi_preferences.cpp  napi_preferences_helper.cpp
frameworks/js/napi/sendable_preferences/: BUILD.gn
frameworks/js/napi/sendable_preferences/include/: napi_preferences.h  napi_preferences_helper.h
frameworks/js/napi/sendable_preferences/src/: entry_point.cpp  napi_preferences.cpp  napi_preferences_helper.cpp
frameworks/js/napi/storage/: BUILD.gn
frameworks/js/napi/storage/include/: napi_storage.h  napi_storage_helper.h
frameworks/js/napi/storage/src/: entry_point_storage.cpp  napi_storage.cpp  napi_storage_helper.cpp
frameworks/js/napi/system_storage/: BUILD.gn
frameworks/js/napi/system_storage/src/: entry_point_system_storage.cpp  napi_system_storage.cpp
frameworks/native/include/: adaptor.h  base64_helper.h  concurrent_map.h  executor.h  executor_pool.h  filelock.h  hitrace.h  pool.h  preferences_base.h  preferences_enhance_impl.h  preferences_impl.h  preferences_observer_stub.h  preferences_utils.h  preferences_value_parcel.h  preferences_xml_utils.h  priority_queue.h  task_executor.h  task_scheduler.h  visibility.h
frameworks/native/src/: base64_helper.cpp  filelock.cpp  preferences_base.cpp  preferences_enhance_impl.cpp  preferences_helper.cpp  preferences_helper_concurrent_lock.cpp  preferences_impl.cpp  preferences_impl_concurrent_lock.cpp  preferences_thread.cpp  task_executor.cpp  (+5 more)
interfaces/inner_api/: BUILD.gn
interfaces/inner_api/include/: adaptor.h  concurrent_striped_map.h  preferences.h  preferences_errno.h  preferences_helper.h  preferences_observer.h  preferences_value.h  preferences_visibility.h
interfaces/ndk/: BUILD.gn
interfaces/ndk/include/: oh_preferences.h  oh_preferences_err_code.h  oh_preferences_option.h
test/js/: BUILD.gn
test/native/: BUILD.gn
test/native/fuzztest/dbpreferences_fuzzer/: BUILD.gn  dbpreferences_fuzzer.cpp  dbpreferences_fuzzer.h
test/native/fuzztest/dbpreferencesbasevalue_fuzzer/: BUILD.gn  dbpreferencesbasevalue_fuzzer.cpp  dbpreferencesbasevalue_fuzzer.h
test/native/fuzztest/dbpreferencesget_fuzzer/: BUILD.gn  dbpreferencesget_fuzzer.cpp  dbpreferencesget_fuzzer.h
test/native/fuzztest/dbpreferencesvector_fuzzer/: BUILD.gn  dbpreferencesvector_fuzzer.cpp  dbpreferencesvector_fuzzer.h
test/native/fuzztest/preferences_fuzzer/: BUILD.gn  preferences_fuzzer.cpp  preferences_fuzzer.h
test/native/unittest/: agents_preferences_advancd_test.cpp  base64_helper_test.cpp  preferences_base_test.cpp  preferences_comprehensive_test.cpp  preferences_file_test.cpp  preferences_helper_executor_pool_test.cpp  preferences_helper_test.cpp  preferences_impl_test.cpp  preferences_operation_test.cpp  preferences_storage_type_test.cpp  preferences_test.cpp  preferences_xml_utils_test.cpp
test/ndk/: BUILD.gn
test/ndk/fuzztest/gskvndkpreferences_fuzzer/: BUILD.gn  gskvndkpreferences_fuzzer.cpp  gskvndkpreferences_fuzzer.h
test/ndk/fuzztest/gskvndkpreferencesget_fuzzer/: BUILD.gn  gskvndkpreferencesget_fuzzer.cpp  gskvndkpreferencesget_fuzzer.h
test/ndk/fuzztest/gskvndkpreferencesput_fuzzer/: BUILD.gn  gskvndkpreferencesput_fuzzer.cpp  gskvndkpreferencesput_fuzzer.h
test/ndk/fuzztest/ndkpreferences_fuzzer/: BUILD.gn  ndkpreferences_fuzzer.cpp  ndkpreferences_fuzzer.h
test/ndk/fuzztest/ndkpreferencesget_fuzzer/: BUILD.gn  ndkpreferencesget_fuzzer.cpp  ndkpreferencesget_fuzzer.h
test/ndk/fuzztest/ndkpreferencesput_fuzzer/: BUILD.gn  ndkpreferencesput_fuzzer.cpp  ndkpreferencesput_fuzzer.h
test/ndk/mock/: application_context.cpp  application_context.h
test/ndk/unittest/: preferences_ndk_storage_type_test.cpp  preferences_ndk_test.cpp  preferences_ndk_value_test.cpp  preferences_test_utils.cpp  preferences_test_utils.h
(+137 files in other folders)
