# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//foundation/distributeddatamgr/preferences/preferences.gni")

module_output_path = "preferences/preferences/native_preferences"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${preferences_native_path}/include/",
    "${preferences_native_path}/platform/include/",
    "${preferences_innerapi_path}/include",
    "${preferences_base_path}/frameworks/common/include",
  ]
}

ohos_unittest("NativePreferencesTest") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  module_out_path = module_output_path

  sources = [
    "unittest/base64_helper_test.cpp",
    "unittest/preferences_file_test.cpp",
    "unittest/preferences_helper_test.cpp",
    "unittest/preferences_storage_type_test.cpp",
    "unittest/preferences_test.cpp",
    "unittest/preferences_xml_utils_test.cpp",
    "${preferences_native_path}/platform/src/preferences_ffrt_task_processor.cpp",
  ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "ability_base:zuri",
    "ability_runtime:dataobs_manager",
    "ffrt:libffrt",
    "googletest:gtest_main",
    "hilog:libhilog",
  ]

  deps = [ "${preferences_innerapi_path}:native_preferences_static" ]
}

ohos_unittest("PreferencesExecutorTest") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  module_out_path = module_output_path

  sources = [
    "unittest/preferences_helper_executor_pool_test.cpp",
    "${preferences_native_path}/platform/src/preferences_executor_pool_task_processor.cpp",
  ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "ability_base:zuri",
    "ability_runtime:dataobs_manager",
    "googletest:gtest_main",
    "hilog:libhilog",
    "googletest:gtest_main",
  ]

  deps = [
    "${preferences_innerapi_path}:native_preferences_static",
  ]
}

###############################################################################
group("unittest") {
  testonly = true

  deps = [ 
    ":NativePreferencesTest",
    ":PreferencesExecutorTest",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [ "fuzztest/preferences_fuzzer:fuzztest" ]
  if (!defined(global_parts_info) ||
        defined(global_parts_info.distributeddatamgr_arkdata_database_core)) {
      deps += [
        "fuzztest/dbpreferences_fuzzer:fuzztest",
        "fuzztest/dbpreferencesbasevalue_fuzzer:fuzztest",
        "fuzztest/dbpreferencesget_fuzzer:fuzztest",
        "fuzztest/dbpreferencesvector_fuzzer:fuzztest",
      ]
  }
}
###############################################################################
