# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//foundation/distributeddatamgr/preferences/preferences.gni")

module_output_path = "preferences/ndk_preferences"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${preferences_base_path}/frameworks/ndk/include",
    "${preferences_base_path}/frameworks/common/include",
    "${preferences_native_path}/include",
    "${preferences_native_path}/platform/include/",
  ]
}

ohos_unittest("NDKPreferencesTest") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  module_out_path = module_output_path

  sources = [
    "unittest/preferences_ndk_test.cpp",
    "unittest/preferences_ndk_value_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "ability_base:zuri",
    "ability_runtime:dataobs_manager",
    "hilog:libhilog",
  ]

  deps = [
    "${preferences_base_path}/interfaces/ndk:ohpreferences_static",
    "//third_party/googletest:gtest_main",
  ]
}

###############################################################################
group("unittest") {
  testonly = true

  deps = [ ":NDKPreferencesTest" ]
}
###############################################################################
