# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/preferences/preferences.gni")

config("ani_config") {
  include_dirs = [
    ".",
    "//foundation/distributeddatamgr/preferences/frameworks/common/include/",
    "common/include",
  ]
}

group("ani_preferences_package") {
  deps = [
    ":ani_preferences",
    ":preferences_abc_etc",
  ]
}

ohos_shared_library("ani_preferences") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    boundary_sanitize = true
    ubsan = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  public_configs = [ ":ani_config" ]

  sources = [
    "common/src/ani_preferences_error.cpp",
    "common/src/js_ani_ability.cpp",
    "src/ani_preferences.cpp",
  ]
  subsystem_name = "distributeddatamgr"
  part_name = "preferences"
  output_extension = "so"

  deps = [ "${preferences_base_path}/interfaces/inner_api:native_preferences" ]

  external_deps = [
    "ability_runtime:abilitykit_native",
    "ability_runtime:napi_base_context",
    "hilog:libhilog",
    "runtime_core:ani",
  ]
}

generate_static_abc("preferences_abc") {
  base_url = "./ets"
  files = [ "./ets/@ohos.data.preferences.ets" ]
  dst_file = "$target_out_dir/preferences.abc"
  out_puts = [ "$target_out_dir/preferences.abc" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/preferences.abc"
}

ohos_prebuilt_etc("preferences_abc_etc") {
  source = "$target_out_dir/preferences.abc"
  module_install_dir = "framework"
  subsystem_name = "distributeddatamgr"
  part_name = "preferences"
  deps = [ ":preferences_abc" ]
}
